k8s/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: flask-app

spec:
  selector:
    app: flask

  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000

  type: NodePort
